[Judd/Andrey] #241 Upgraded error-prone version and fixed newly found violations